k8s/minio/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      hostname: minio
      volumes:
        - name: truenas-minio
          persistentVolumeClaim:
            claimName: truenas-minio
      containers:
        - name: minio
          image: quay.io/minio/minio:RELEASE.2024-08-03T04-33-23Z
          args:
            - server
            - /data
            - --console-address
            - :9001
          volumeMounts:
            - name: truenas-minio
              mountPath: /data
          ports:
            - name: api
              containerPort: 9000
            - name: console
              containerPort: 9001
          resources:
            limits:
              memory: 1G
            requests:
              memory: 800M
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 20
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: api

---
apiVersion: v1
kind: Service
metadata:
  name: console-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: console
